Dosage 2.13 (released xx.xx.2014)

Features:
- comics: Added OhJoySexToy, TheGentlemansArmchair.

Fixes:
- comics: Fixed EvilInc, FredoAndPidjin.


Dosage 2.12 (released 24.1.2014)

Changes:
- cmdline: The --basepath option now replaces "~" or "~user" with the
  users home directory.
- documentation: Added install instructions at doc/install.txt

Fixes:
- comics: Fix AbstruseGoose, AxeCop, BardsWorth, DemolitionSquad.
- comics: Remove broken ChugWorth.


Dosage 2.11 (released 15.1.2014)

Features:
- comics: Added CampComic, EatThatToast, FoulLanguage,
  PoorlyDrawnLines and StandStillStaySilent.


Dosage 2.10 (released 5.1.2014)

Features:
- comics: Comic strips are downloaded in parallel. To prevent overload
  of comic sites, no more than one download thread per host is allowed.

Changes:
- cmdline: Ensure only one instance of dosage is running to prevent
  accidental DoS when fetching multiple comics of one site.
- comics: Wait up to 1 second between two URL page downloads.


Dosage 2.9 (released 22.12.2013)

Features:
- events: Ensure maximum display width on RSS and HTML images.
- comics: Added EdmundFinney, Gaia, GaiaGerman, InternetWebcomic,
  NotInventedHere, RedsPlanet, RomanticallyApocalyptic,
  ScandinaviaAndTheWorld, TheGamerCat, Weregeek.
  Thanks to Null000 for the patches.
  Closes: GH bug #48

Fixes:
- comics: Get larger images from GoComics.
- comics: Fix AbstruseGoose and QuestionabelContent.
  Closes: GH bug #50


Dosage 2.8 (released 8.12.2013)

Features:
- comics: Added image text saving for comic strips.
  Used in xkcd and AbstruseGoose comics to store the
  image title text.
  Closes: GH bug #42

Fixes:
- comics: Fixed ForLackOfABetterComic.
- comics: Store large xkcd images if available.
  Closes: GH bug #43


Dosage 2.7 (released 24.11.2013)

Fixes:
- comics: Fixed GoComic image URL matcher.
- comics: Fixed AxeCop, PensAndTales_FireflyCross.
- comics: Remove broken ComicFury_Rosie, InsideOut, SodiumEyes.


Dosage 2.6 (released 12.11.2013)
